# turtlebot_visual_servoing

./: CMakeLists.txt  README.md  package.xml
src/: image_transport_publisher.cpp  image_transport_subscriber.cpp  read_topic.cpp  surf.cpp  turtle_catenary.cpp  turtle_line_ok.cpp  turtle_play.cpp  turtle_tracker.cpp  turtle_turn_ok.cpp  turtle_turn_ok_160205_ex1.txt  turtle_turn_ok_160205_ex2.txt  turtle_turn_ok_160205_ex3.txt  workingTurtle.cpp
src/Results/: 20160215_ 1743result.txt  20160215_1743leader.txt  leader160215_1700.txt  plot.plt  plot_turn.plt  results160215.txt  results160215_1700.txt
src/image_processing/: color_detection.cpp  color_detection.hpp
